kubernetes/apps/chrome-vnc/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-vnc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chrome-vnc
  template:
    metadata:
      labels:
        app: chrome-vnc
    spec:
      runtimeClassName: nvidia
      securityContext:
        fsGroup: 1000
      containers:
        - name: chrome
          image: linuxserver/chrome:latest@sha256:aec9671971c1aaf3e409cab70a10aad5271801ee1275b752450aff8fc226172d
          securityContext:
            seccompProfile:
              type: Unconfined
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "4"
              memory: "4Gi"
          volumeMounts:
            - name: chrome-profile
              mountPath: /config
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: chrome-profile
          persistentVolumeClaim:
            claimName: chrome-vnc-pvc
        - name: dshm
          emptyDir:
            medium: Memory
