kubernetes/apps/chrome-vnc/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome-vnc
spec:
  selector:
    app: chrome-vnc
  ports:
    - port: 3000
      targetPort: 3000
