kubernetes/apps/chrome-vnc/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chrome-vnc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: chrome-vnc.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chrome
                port:
                  number: 3000
  tls:
    - hosts:
        - chrome-vnc.homelab.leehosanganson.dev
      secretName: chrome-vnc-tls
